index en segunda pre entrega

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <!--aqui van a ir con los enlaces las imagenes bien armadas de iconos con movimiento o efecto-->
                 <a class="icon" href="https://msng.link/o/?sofia.borsato=ig"><img class="iconi" src="./assets/images/insta chiquito.svg" alt=""></a>
                 <a class="icon" href="https://wa.me/3471623833?text=whatsapp"><img class= "iconw" src="./assets/images/whatsapp chiquito.svg" alt=""></a>
-                <p> 2022 todos los derechos reservados </p>
+                <p> 2022 Todos los derechos reservados </p>
     </footer>
     <script src="./js/bootstrap.bundle.min.js"> 
     </script>
