grabo cambios en mi rama 2

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <br>
             </div>
         </section>
+         <hr class="featurette-divider">
         <section class="section-vision">
           <h2 class="matrimonio"> Nuestra Vision del Matrimonio </h2>
               <h4 class="matrimonio">¿Cómo Amarnos En Matrimonio?</h4>
