--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -107,7 +107,7 @@
                 <div class="card bg-dark text-white">
                      <img src="../assets/images/preboda.jpg" class="card-img" alt="foto3">
                     <div class="card-img-overlay">
-                      <h5 class="card-title animate__animated animate__headShake animate__delay-2s animate__infinite ">FUISTE ,ERES, Y SIEMPRE SERAS MI MAS BONITA CASUALIDAD </h5>
+                      <h5 class="card-title ">FUISTE ,ERES, Y SIEMPRE SERAS MI MAS BONITA CASUALIDAD </h5>
                     </div>
                 </div>
             </div>
