--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -47,29 +47,16 @@
         </header>
         <main>
             <h1 class="titulos animate__animated animate__bounceInRight"> CONTACTO </h1> <!--estas imagenes en futuro irian bien alineadas en su tamaño promedio-->
-            <div class="container2 d-flex  ">
-                <div class="row">
-                     <div class="col-md-6 col-sm-12 d-flex">
-                       <img class="fott m-auto rounded-circle shadow-sm p-3 mb-5 bg-body rounded" src="../assets/images/DSC-214.jpg" alt="">
-                     </div>
-                     <div class="col-md-6 col-sm-12 d-flex ">
-                        <div class="esp1 my-2 ">
-                          <p class="historia d-flex justify-content-center lh-base shadow-lg p-3 mb-5 bg-body rounded "> “En cada historia de amor, hay dos momentos importantes: el día que conoces a la persona de tus sueños y el día que te casas con ella. Es muy difícil explicar con palabras la alegría que sentimos 
-                            por compartir con ustedes este día tan especial.”</p>
-                        </div>
-                     </div>
-                </div>
-           </div>
                  <br>
-          </section>
                 <div>
-                  <h3 class="textoregalo fs-1 animate__animated animate__bounceInRight animate__infinite --animate-duration: 0.5s;"> Regalo de Bodas </h3>
+                  <h3 class="textoregalo fs-1 animate__animated animate__bounceInRight  --animate-duration: 0.5s;"> Regalo de Bodas </h3>
                   <h2 class="textob my-3 fs-3"> Buzon de Felicitaciones </h2>
                   <p class="texton fw-bold">¡ Envíanos tus Buenos Deseos ! </p>
                   <p class="P my-1 fw-bold">Sin compromisos , Si Algo nos quieren Regalar en efectivo lo Sabremos Apreciar 
                     Les dejamos un Botón de suscripción para aquellos que quieran que les enviemos por email los Datos Bancarios para colaborar con nuestra Luna de Miel.
                     Gracias por su presencia en este día tan Especial.</p>
                 </div>
+
                  <form class="for">
                     <div class="mb-3 shadow p-3 mb-5 bg-body rounded">
                       <label for="exampleInputEmail1" class="form-label">Nombre</label>
@@ -91,8 +78,6 @@
                       <button type="submit" class="btn btn-success my-3 d-flex justify-content-center animate__animated animate__infinite   animation-duration: 2s; animate__pulse">Enviar</button>
                       <input type="checkbox" class="form-check-input rounded-circle shadow-sm fs-4" id="exampleCheck1">
                       <label class="form-check-label shadow-sm p-3 mb-5 bg-body rounded fs-4" for="exampleCheck1">Deseo Suscribirme</label>
-                     
-                      
                     </div>
                   </form>
                 <section class="tarjetas my-2">
