--- a/pages/nuestraboda.html
+++ b/pages/nuestraboda.html
@@ -64,6 +64,7 @@
                 </div>
         </section>
             <br>
+            <hr class="featurette-divider">
         <section>
                 <h2 class="texto-bodau my-4">Ubicación Del Salon </h2> <!--mapa del salon de la fiesta-->
                 <iframe class="iframe my-1" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3367.5441499807!2d-63.232896184826764!3d-32.43136668107764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cc425eef6dd39d%3A0xb2e353326bdad938!2sVilla%20Maria%20Golf!5e0!3m2!1ses-419!2sar!4v1666641755772!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" 
@@ -77,6 +78,7 @@
                 eventos y bodas al aire libre, pero que cuenta con un salón moderno y muy vistoso. 
                 </p>
         </section>
+        <hr class="featurette-divider">
             <br>
         <section>
                 <h2 class="texto-bodav my-1"> Video de Nuestra Pre Boda en las Sierras de Cordoba </h2><!--este video es maquetado luego va a ir el mio con un video de las fotos de nuestra
