grabo cambios con mq para mobile

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -114,7 +114,7 @@
             <a href="https://msng.link/o/?sofia.borsato=ig"><img src="../assets/images/insta chiquito.svg" alt=""></a>
             <a href="https://wa.me/3471623833?text=whatsapp"><img src="../assets/images/whatsapp chiquito.svg" alt=""></a> <!--luego en mi pagina van a ser botones con mas estilo 
             que te lleve a los enlaces de mis redes-->
-            <p> 2022 todos los derechos reservados </p>
+            <p> 2022 Todos los derechos reservados </p>
         </footer>
         <script src="../js/bootstrap.bundle.min.js"> 
         </script>
