--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -38,8 +38,7 @@
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="./contacto.html">Contacto</a>
-                      </li>
-                    </ul>
+                      push/ul>
                   </div>
                 </div>
               </nav>
@@ -93,7 +92,7 @@
     <footer class="foot">
             <a href="https://msng.link/o/?sofia.borsato=ig"><img src="../assets/images/insta chiquito.svg" alt=""></a>
             <a href="https://wa.me/3471623833?text=whatsapp"><img src="../assets/images/whatsapp chiquito.svg" alt=""></a>
-            <p> 2022 todos los derechos reservados </p>
+            <p> 2022 Todos los derechos reservados </p>
     </footer>
     <script src="../js/bootstrap.bundle.min.js"> 
     </script>
