grabo version en rama2 con correcciones de margenes letras mq y form

--- a/index.html
+++ b/index.html
@@ -81,12 +81,18 @@
                  convertirlas en un solo proyecto de vida para los dos</p>
         </section>         
     </main> <!--en un futuro quiero agregar otra section con contenido mas dinamico para interactuar como un verdadero / falso en las parejas-->          
-    <footer class="foot"> 
-        <!--aqui van a ir con los enlaces las imagenes bien armadas de iconos con movimiento o efecto-->
-                <a class="icon" href="https://msng.link/o/?sofia.borsato=ig"><img class="iconi" src="./assets/images/insta chiquito.svg" alt=""></a>
-                <a class="icon" href="https://wa.me/3471623833?text=whatsapp"><img class= "iconw" src="./assets/images/whatsapp chiquito.svg" alt=""></a>
-                <p> 2022 Todos los derechos reservados </p>
-    </footer>
+    <footer class="foot">           
+          <div class= "iconos">
+             <a href="https://msng.link/o/?sofia.borsato=ig" target="_blank" >
+             <img src="./assets/images/insta chiquito.svg" height="30" width="30"  alt=""></a>
+             <a href="https://wa.me/3471623833?text=whatsapp" target="_blank">
+             <img src="./assets/images/whatsapp chiquito.svg" height="30" width="30" alt=""></a>
+          </div> 
+         <div>
+          Copyright @ 2022 - desarrollado por
+          <a class="text-dark" href="" target="_blank">Borsato Sofia</a>
+          </div>
+  </footer>
     <script src="./js/bootstrap.bundle.min.js"> 
     </script>
 </body>
