--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria</title>
-    <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />.
+    <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
@@ -47,7 +47,7 @@
                 <h1 class="titulos"> GALERIA </h1> <!--mi galeria no es dinamica pero en un futuro quiero que este llena de fotos
                 alineadas con mucho estilo y efectos y linkear con un boton para que lleve a un sitio con las fotos que aparecen los 
                 invitados y puedan descargarse la foto a gusto donde aparecian en la fiesta-->
-                <p class="texto-boda my-2">
+                <p class="texto-boda my-2 fw-bolder">
                 Esperamos que puedan disfrutar de un breve paseo en imagenes de el día de nuestra boda. 
                 Que con amor seleccionamos estas imágenes para que disfruten.
                 </p>
@@ -79,7 +79,7 @@
                     <div class="hijo img-thumbnail"><img src="../assets/images/b24a.jpg" alt="1" width="100%" height="100%"></div>
                    
                 
-                        <p class="texto-boda5 my-3">
+                        <p class="texto-boda5 fw-bold my-3">
                             Grábame como un sello sobre tu corazón; llévame como una marca sobre tu brazo.
                             Fuerte es el amor, como la muerte, y tenaz la pasión, como el sepulcro. 
                             Como llama divina es el fuego ardiente del amor. 
@@ -89,10 +89,17 @@
                     <hr class="featurette-divider">
         </section>
     </main>
-    <footer class="foot">
-            <a href="https://msng.link/o/?sofia.borsato=ig"><img src="../assets/images/insta chiquito.svg" alt=""></a>
-            <a href="https://wa.me/3471623833?text=whatsapp"><img src="../assets/images/whatsapp chiquito.svg" alt=""></a>
-            <p> 2022 Todos los derechos reservados </p>
+    <footer class="foot">           
+      <div class= "iconos">
+        <a href="https://msng.link/o/?sofia.borsato=ig" target="_blank" >
+          <img src="../assets/images/insta chiquito.svg" height="30" width="30"  alt=""></a>
+          <a href="https://wa.me/3471623833?text=whatsapp" target="_blank">
+          <img src="../assets/images/whatsapp chiquito.svg" height="30" width="30" alt=""></a>
+      </div> 
+     <div>
+      Copyright @ 2022 - desarrollado por
+      <a class="text-dark" href="" target="_blank">Borsato Sofia</a>
+      </div>
     </footer>
     <script src="../js/bootstrap.bundle.min.js"> 
     </script>
