--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />.
+    <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
@@ -113,10 +113,17 @@
             </div>
         </section>
     </main>
-    <footer class="foot">
-        <a href="https://msng.link/o/?sofia.borsato=ig"><img src="../assets/images/insta chiquito.svg" alt="1"></a>
-        <a href="https://wa.me/3471623833?text=whatsapp"><img src="../assets/images/whatsapp chiquito.svg" alt="2"></a>
-        <p> 2022 Todos los derechos reservados </p>
+    <footer class="foot">           
+      <div class= "iconos">
+        <a href="https://msng.link/o/?sofia.borsato=ig" target="_blank" >
+          <img src="../assets/images/insta chiquito.svg" height="30" width="30"  alt=""></a>
+          <a href="https://wa.me/3471623833?text=whatsapp" target="_blank">
+          <img src="../assets/images/whatsapp chiquito.svg" height="30" width="30" alt=""></a>
+      </div> 
+     <div>
+      Copyright @ 2022 - desarrollado por
+      <a class="text-dark" href="" target="_blank">Borsato Sofia</a>
+      </div>
     </footer> 
     <script src="../js/bootstrap.bundle.min.js"> 
     </script>  
