--- a/pages/nuestraboda.html
+++ b/pages/nuestraboda.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestra Boda</title>
-    <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />.
+    <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
@@ -89,10 +89,17 @@
                 encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
     </main>
-    <footer class="foot">
-        <a href="https://msng.link/o/?sofia.borsato=ig"><img src="../assets/images/insta chiquito.svg" alt=""></a>
-        <a href="https://wa.me/3471623833?text=whatsapp"><img src="../assets/images/whatsapp chiquito.svg" alt=""></a>
-        <p> 2022 Todos los derechos reservados </p>
+    <footer class="foot">           
+      <div class= "iconos">
+         <a href="https://msng.link/o/?sofia.borsato=ig" target="_blank" >
+         <img src="../assets/images/insta chiquito.svg" height="30" width="30"  alt=""></a>
+         <a href="https://wa.me/3471623833?text=whatsapp" target="_blank">
+         <img src="../assets/images/whatsapp chiquito.svg" height="30" width="30" alt=""></a>
+      </div> 
+     <div>
+      Copyright @ 2022 - desarrollado por
+      <a class="text-dark" href="" target="_blank">Borsato Sofia</a>
+      </div>
     </footer>
     <script src="../js/bootstrap.bundle.min.js"> 
     </script>
