grabo version de rama2 con cambios de estilaje

--- a/index.html
+++ b/index.html
@@ -49,32 +49,33 @@
     <main>
         <section>
             <div>
-                <h1 class="titulos my-3"> SOFIA Y SEBASTIAN </h1> <!--Nuesta historia , por que decidimos casarnos y que ostaculos atravesamos-->
+                <div class="titulos bg-body rounded"> </div> 
+                <h1 class="tituloprincipal my-1"> SOFIA Y SEBASTIAN </h1>
                     
-                <h2 class="texto-n my-3 fs-1"> Nuestra boda </h2> <!--una base de lo que seria mi pagina dinamica de mi propia boda
+                <h2 class="texto-n my-4 fs-1 animate__animated animate__swing animation-duration: 2s;"> Nuestra boda </h2> <!--una base de lo que seria mi pagina dinamica de mi propia boda
                 quiero que tenga dinamismo para luego poder crear hasta sitios pero que sean invitaciones propias
                 de una boda inspirado en mi boda real con contenido maquetado y 
                 con algunas imagenes reales que son las de header quiero transmitir la importancia de tener momentos lindos
                  en sitios dianmicos que lo puedas abrir una y otra vez para atesorarlos-->
                  
-                   <p class="casamiento my-1"> Queremos sumergirlos 
-                    en nuestro rincón de romanticismo y sueños.
-                    Los mismos sueños que uno anhela y espera ese día especial, la espera de nuestro gran día al fin finalizo.
+                   <p class="intro my-3 shadow-lg p-3 mb-5 bg-body rounded"> Queremos sumergirlos 
+                    en nuestro rincón de romanticismo y sueños.</p>
+
+                   <p class="casamiento my-1">Los mismos sueños que uno anhela y espera ese día especial, la espera de nuestro gran día al fin finalizo.
                     y por eso pretendemos sumergirlos un Ratito en nuestra historia y nuestra Experiencia con esta Página. 
                     Una web dinamica con el fin de contarles y que ustedes puedan interactuar con nosotros, Conocernos y que puedan ver
                     una linda historia que queda grabada en los corazones, en la memoria y en esta pagina para nuestros queridos espectadores. 
                     Contarles sobre nosotros y nuestros afectos, nuestros deseos y nuestra gran felicidad, 
-                    que sepan nuestra visión y que puedan atesorar tanto como nosotros esta experiencia que queremos compartirles.
-                    </p> 
+                    que sepan nuestra visión y que puedan atesorar tanto como nosotros esta experiencia que queremos compartirles.</p> 
                 <br>
             </div>
         </section>
          <hr class="featurette-divider">
         <section class="section-vision">
-          <h2 class="matrimonio"> Nuestra Vision del Matrimonio </h2>
-              <h4 class="matrimonio">¿Cómo Amarnos En Matrimonio?</h4>
+          <h2 class="matrimonio "> Nuestra Vision del Matrimonio </h2>
+              <h4 class="matrimonio my-4">¿Cómo Amarnos En Matrimonio?</h4>
               <br>
-              <p class="vision">“Y sobre todas estas cosas, vestíos de amor, que es el vínculo perfecto” (Colosenses 3:14)</p>
+              <p class="vision my-1">“Y sobre todas estas cosas, vestíos de amor, que es el vínculo perfecto” (Colosenses 3:14)</p>
               <p class="vision"> Casarme contigo es esa poesía que llena los corazones. El amor siempre será un sentimiento que hace este mundo un lugar mejor y bonito.</p>
               <p class="vision">La Biblia dice que el hombre y la mujer al unirse en matrimonio, serán “una sola carne”. 
                   Eso significa que deben unir sus sentimientos, sus emociones, sus sueños y sus metas individuales y 
