--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -46,10 +46,11 @@
                 </nav>
         </header>
         <main>
-            <h1 class="titulos animate__animated animate__bounceInRight"> CONTACTO </h1> 
-                  <h3 class="textoregalo fs-1 animate__animated animate__bounceInRight  --animate-duration: 0.5s; my-4"> Regalo de Bodas </h3>
+                  <div class="titulos bg-body rounded"> </div> 
+                  <h1 class="tituloprincipal my-1"> CONTACTO </h1>
+                  <h3 class="textoregalo fs-1 animate__animated animate__swing animation-duration: 2s; my-4"> Regalo de Bodas </h3>
                   <h2 class="textob my-3 fs-3"> Buzon de Felicitaciones </h2>
-                  <p class="texton fw-bold">¡ Envíanos tus Buenos Deseos ! </p>
+                  
                   <p class="P my-1 fw-bold">Sin compromisos , Si Algo nos quieren Regalar en efectivo lo Sabremos Apreciar 
                     Les dejamos un Botón de suscripción para aquellos que quieran que les enviemos por email los Datos Bancarios para colaborar con nuestra Luna de Miel.
                     Gracias por su presencia en este día tan Especial.</p>
@@ -85,6 +86,7 @@
                       </div>    
                   </div>        
               </div>
+              <div class="corazonrosa"> </div> 
                 <section class="tarjetas my-2">
                     <div class="card-group">
                       <div class="card">
