--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -44,9 +44,8 @@
               </nav>
     </header>
      <main>
-                <h1 class="titulos"> GALERIA </h1> <!--mi galeria no es dinamica pero en un futuro quiero que este llena de fotos
-                alineadas con mucho estilo y efectos y linkear con un boton para que lleve a un sitio con las fotos que aparecen los 
-                invitados y puedan descargarse la foto a gusto donde aparecian en la fiesta-->
+                <div class="titulos bg-body rounded"> </div> 
+                <h1 class="tituloprincipal my-1"> GALERÍA </h1>
                 <p class="texto-boda my-2 fw-bolder">
                 Esperamos que puedan disfrutar de un breve paseo en imagenes de el día de nuestra boda. 
                 Que con amor seleccionamos estas imágenes para que disfruten.
