--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -47,7 +47,8 @@
     </header>
     <main>
         <section>
-            <h1 class="titulos"> NOSOTROS</h1>
+          <div class="titulos bg-body rounded"> </div> 
+          <h1 class="tituloprincipal my-1"> NOSOTROS </h1>
             <div>
                 <h2 class="elladijosi my-3 lh-sm animate__animated animate__swing animation-duration: 2s; ">ELLA DIJO QUE SÍ</h2>
                 <p class="elladijosi11 my-3 animate__animated animate__bounceInLeft">Llego el día de la propuesta, era un estado de ansiedad y nerviosismo para Seba mi pareja.
@@ -84,6 +85,7 @@
                      </div>
                 </div>
            </div>
+           <div class="corazonrosa"> </div> 
         <div class="container-fluid1 my-3">
             <div class="row">
                  <div class="col-md-6 col-sm-12">
