--- a/pages/nuestraboda.html
+++ b/pages/nuestraboda.html
@@ -48,7 +48,8 @@
     <main>
         <section>
                 <div>
-                <h1 class="titulos"> NUESTRA BODA </h1> <!--relato de nuestro dia especial -->
+                  <div class="titulos bg-body rounded"> </div> 
+                  <h1 class="tituloprincipal my-1"> NUESTRA BODA </h1>
                     
                 <p class="texto-boda2">
                 Historias y momentos que se contemplan en el corazón,
@@ -81,8 +82,8 @@
         <hr class="featurette-divider">
             <br>
         <section>
-                <h2 class="texto-bodav my-1"> Video de Nuestra Pre Boda en las Sierras de Cordoba </h2><!--este video es maquetado luego va a ir el mio con un video de las fotos de nuestra
-                pre boda-->
+                <div class="corazonrosa"> </div> 
+                <h2 class="texto-bodav my-1"> Video de Nuestra Pre Boda en las Sierras de Córdoba </h2>
                 <br>
                 <iframe class="video my-1" width="700" height="315" src="../assets/videos/VIDEO BODA.mp4" 
                 title="video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
