grabo la version nueva de la segunda rama

--- a/index.html
+++ b/index.html
@@ -52,11 +52,7 @@
                 <div class="titulos bg-body rounded"> </div> 
                 <h1 class="tituloprincipal my-1"> SOFIA Y SEBASTIAN </h1>
                     
-                <h2 class="texto-n my-4 fs-1 animate__animated animate__swing animation-duration: 2s;"> Nuestra boda </h2> <!--una base de lo que seria mi pagina dinamica de mi propia boda
-                quiero que tenga dinamismo para luego poder crear hasta sitios pero que sean invitaciones propias
-                de una boda inspirado en mi boda real con contenido maquetado y 
-                con algunas imagenes reales que son las de header quiero transmitir la importancia de tener momentos lindos
-                 en sitios dianmicos que lo puedas abrir una y otra vez para atesorarlos-->
+                <h2 class="texto-n my-4 fs-1 animate__animated animate__swing animation-duration: 2s;"> Nuestra boda </h2> 
                  
                    <p class="intro my-3 shadow-lg p-3 mb-5 bg-body rounded"> Queremos sumergirlos 
                     en nuestro rincón de romanticismo y sueños.</p>
