--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -90,7 +90,7 @@
                 <section class="tarjetas my-2">
                     <div class="card-group">
                       <div class="card">
-                        <img src="../assets/images/b15.jpg" class="card-img-top" alt="foto1">
+                        <img src="../assets/images/c.jpg" class="card-img-top" alt="foto1">
                         <div class="card-body">
                           <h5 class="card-title">UNA BODA CON ANÉCDOTAS</h5>
                           <p class="card-text">Anectodas de como nos conocimos, el camino recorrido , los años , y las cosas vergonzosas que vivimos. </p>
@@ -98,7 +98,7 @@
                         </div>
                       </div>
                       <div class="card">
-                        <img src="../assets/images/b14.jpg" class="card-img-top" alt="foto2">
+                        <img src="../assets/images/a.jpg" class="card-img-top" alt="foto2">
                         <div class="card-body">
                           <h5 class="card-title">NO FALTA EL CLÁSICO VALS</h5>
                           <p class="card-text">Momento familiar Clasico en toda boda que deja un Recuerdo Especial en todos los corazones.</p>
@@ -106,10 +106,10 @@
                         </div>
                       </div>
                       <div class="card">
-                        <img src="../assets/images/b23.jpg" class="card-img-top " alt="foto3">
+                        <img src="../assets/images/b.jpg" class="card-img-top " alt="foto3">
                         <div class="card-body">
-                          <h5 class="card-title">FOTOS AL AIRE LIBRE</h5>
-                          <p class="card-text">Recuerdos de una seccion fotografica en el Predio Club Golf de Villa Maria </p>
+                          <h5 class="card-title">JUEGOS AL AIRE LIBRE</h5>
+                          <p class="card-text"> Toro Mecánico , fueron muchos los valientes derrotados , Predio Club Golf de Villa Maria.  </p>
                           <p class="card-text"><small class="text-muted ">  SOFI & SEBA  </small></p>
                         </div>
                       </div>
