grabo correciones de texto y titulos antes de sass

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -48,11 +48,12 @@
         <main>
                   <div class="titulos bg-body rounded"> </div> 
                   <h1 class="tituloprincipal my-1"> CONTACTO </h1>
-                  <h3 class="textoregalo fs-1 animate__animated animate__swing animation-duration: 2s; my-4"> Regalo de Bodas </h3>
+                  <h3 class="textoregalo fs-1 animate__animated animate__swing animation-duration: 2s; my-5 h2 display-4 font-italic "> Regalo de Bodas </h3>
                   <h2 class="textob my-3 fs-3"> Buzon de Felicitaciones </h2>
                   
-                  <p class="P my-1 fw-bold">Sin compromisos , Si Algo nos quieren Regalar en efectivo lo Sabremos Apreciar 
-                    Les dejamos un Botón de suscripción para aquellos que quieran que les enviemos por email los Datos Bancarios para colaborar con nuestra Luna de Miel.
+                  <p class="P my-2 font-italic font-weight-norma">Sin compromisos ,si algo nos quieren regalar en efectivo lo sabremos apreciar. 
+                    Les dejamos un Botón de suscripción, para quienes deseen 
+                    que les enviemos por e-mail los datos bancarios para colaborar con nuestra Luna de Miel.
                     Gracias por su presencia en este día tan Especial.</p>
                 </div>
 
