--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -50,21 +50,16 @@
           <div class="titulos bg-body rounded"> </div> 
           <h1 class="tituloprincipal my-1"> NOSOTROS </h1>
             <div>
-                <h2 class="elladijosi my-3 lh-sm animate__animated animate__swing animation-duration: 2s; ">ELLA DIJO QUE SÍ</h2>
-                <p class="elladijosi11 my-3 animate__animated animate__bounceInLeft">Llego el día de la propuesta, era un estado de ansiedad y nerviosismo para Seba mi pareja.
-                Yo en mi interior siempre lo esperaba, pero no sabría si me podría dar cuenta o sospechar cuando sea el momento en que mi pareja me lo pida. Y realmente ese día no lo sospeche, se dio en un contexto muy natural y nada exagerado por suerte nada vergonzoso o delante de público ya que siempre fui más reservada 
-                y el respeto muy bien ese aspecto. 
-                Muchas veces habíamos hablado de la idea de casarnos, 
-                pero nunca dejaba de estar un poco lejana por una u otra cuestión. 
-                Un domingo como de costumbre decidimos Salir a pasear, comprar biscochos para el desayuno
-                y salir sin saber dónde terminamos, como a veces acostumbramos hacerlo, sin que parezca
-                tan extraño justo ese día, llegamos a una estatua de un cristo redentor que se encuentra
-                en nuestra Ciudad, si bien me pareció algo raro ir allí, nunca sospeche, 
-                la propuesta fue allí, se dio de manera muy natural era como consentir lo que los dos ya 
-                sabíamos que sucedería. 
-                Estábamos muy emocionados, luego trascendió la pandemia por COVID 19 y tuvimos que posponer
-                dos veces la fecha y que pasaran dos largos años, que también nos ayudaron a juntar el dinero
-                para nuestro día especial.
+                <h2 class="elladijosi h2 my-5 lh-sm animate__animated animate__swing animation-duration: 2s; ">ELLA DIJO QUE SÍ</h2>
+                <h3 class="cuando my-1fw-bold d-flex justify-content-center bg-p text-muted h-3"> ¿Dónde y Cómo fue la Propuesta ? </h3> 
+                <p class="elladijosi11 my-1"> Muchas veces habíamos hablado de la idea de casarnos, un domingo como de costumbre decidimos salir a pasear, compramos biscochos para el desayuno
+                  y salimos sin saber dónde terminariamos,como a veces acostumbramos hacerlo, sin que parezca
+                  tan extraño justo ese día, llegamos a un un cristo redentor que se encuentra
+                  en nuestra ciudad, nunca sospeché. 
+                  La propuesta fue allí, se dió de manera muy natural era como consentir lo que los dos ya 
+                  sabíamos que sucedería. 
+                  Estábamos muy emocionados,luego trascendió la pandemia por COVID 19 y tuvimos que posponer
+                  dos veces la fecha y que pasaran dos largos años.</p>
                      
                 </p>
             </div>
@@ -75,12 +70,11 @@
                      </div>
                      <div class="col-md-6 col-sm-12 d-flex flex-column align-items-center justify-content-center">
                         <div>
-                            <h2 class="s my-2 animate__animated animate__pulse animate__infinite	"> SOFIA </h2>
+                            <h2 class="s my-2 animate__animated animate__pulse"> SOFIA </h2>
                         <p class="sofia"> Como relatante de esta historia quiero presentarme, 
-                            tengo 27 años, vivo en la cuidad de Villa María provincia de Córdoba, 
-                            estamos esperando nuestro primer bebe Sara, fruto de nuestro amor de estos nueve años.
-                            Sobre mi personalidad les puedo contar que soy una persona que le gusta la simpleza y
-                            disfrutar de los pequeños momentos en familia que es mi mayor tesoro.</p>
+                            tengo 27 años, vivo en la cuidad de Villa María provincia de Córdoba.
+                            Soy una persona que le gusta la simpleza y
+                            disfrutar de los pequeños momentos en familia,que es mi mayor tesoro.</p>
                         </div>
                      </div>
                 </div>
@@ -93,13 +87,13 @@
                  </div>
                  <div class="col-md-6 col-sm-12 d-flex flex-column align-items-center justify-content-center">
                     <div>
-                        <h2 class="s animate__animated animate__pulse animate__infinite	"> SEBASTIAN </h2>
-                        <p class="sofia my-2"> Mi protagonismo en la historia me da el gusto de presentarme, 
-                        tengo 28 años, vivo en la cuidad de Villa María provincia de Córdoba y 
-                        esperamos ansiosos la llegada de nuestra bebita que nacerá pronto. 
-                        Mi personalidad es ser muy perspicaz, soy una persona muy activa y muy inquieta.
-                        Me gusta disfrutar de mi familia, me gusta ayudar a quien lo necesite,
-                        y ser muy servicial con las personas que me rodean en general.</p>
+                        <h2 class="s animate__animated animate__pulse"> SEBASTIAN </h2>
+                        <p class="sofia my-2"> 
+                        Tengo 28 años, vivo en la cuidad de Villa María provincia de Córdoba,
+                        esperamos ansiosos la llegada de nuestra bebita. 
+                        Mi personalidad es ser muy perspicaz,soy una persona muy activa.
+                        Disfrutar,cuidar de mi familia, y ser muy servicial con las personas es lo que me caracteriza.
+                        </p>
                     </div>
                  </div>
             </div>
@@ -109,7 +103,7 @@
                 <div class="card bg-dark text-white">
                      <img src="../assets/images/preboda.jpg" class="card-img" alt="foto3">
                     <div class="card-img-overlay">
-                      <h5 class="card-title ">FUISTE ,ERES, Y SIEMPRE SERAS MI MAS BONITA CASUALIDAD </h5>
+                      <h5 class="card-title ">FUISTE ,ERES, Y SIEMPRE SERÁS MI MÁS BONITA CASUALIDAD </h5>
                     </div>
                 </div>
             </div>
