--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                    <p class="intro my-3 shadow-lg p-3 mb-5 bg-body rounded"> Queremos sumergirlos 
                     en nuestro rincón de romanticismo y sueños.</p>
 
-                   <p class="casamiento my-1">Los mismos sueños que uno anhela y espera ese día especial, la espera de nuestro gran día al fin finalizo.
+                   <p class="casamiento my-1 justify-content-center ">Los mismos sueños que uno anhela y espera ese día especial, la espera de nuestro gran día al fin finalizo.
                     y por eso pretendemos sumergirlos un Ratito en nuestra historia y nuestra Experiencia con esta Página. 
                     Una web dinamica con el fin de contarles y que ustedes puedan interactuar con nosotros, Conocernos y que puedan ver
                     una linda historia que queda grabada en los corazones, en la memoria y en esta pagina para nuestros queridos espectadores. 
@@ -68,14 +68,16 @@
         </section>
          <hr class="featurette-divider">
         <section class="section-vision">
-          <h2 class="matrimonio "> Nuestra Vision del Matrimonio </h2>
-              <h4 class="matrimonio my-4">¿Cómo Amarnos En Matrimonio?</h4>
+              <h2 class="matrimonio my-3 display-3 h1">¿Cómo Amarnos En Matrimonio?</h2>
               <br>
-              <p class="vision my-1">“Y sobre todas estas cosas, vestíos de amor, que es el vínculo perfecto” (Colosenses 3:14)</p>
-              <p class="vision"> Casarme contigo es esa poesía que llena los corazones. El amor siempre será un sentimiento que hace este mundo un lugar mejor y bonito.</p>
-              <p class="vision">La Biblia dice que el hombre y la mujer al unirse en matrimonio, serán “una sola carne”. 
-                  Eso significa que deben unir sus sentimientos, sus emociones, sus sueños y sus metas individuales y 
-                 convertirlas en un solo proyecto de vida para los dos</p>
+              <p class="vision my-1">“Y sobre todas estas cosas, vestíos de amor, que es el vínculo perfecto” (Colosenses 3:14)
+                Casarme contigo es esa poesía que llena los corazones. El amor siempre será un sentimiento que hace este mundo un lugar mejor y bonito.
+                La Biblia dice que el hombre y la mujer al unirse en matrimonio, serán “una sola carne”. 
+                Eso significa que deben unir sus sentimientos, sus emociones, sus sueños y sus metas individuales y 
+                convertirlas en un solo proyecto de vida para los dos
+              </p>
+             
+              
         </section>         
     </main> <!--en un futuro quiero agregar otra section con contenido mas dinamico para interactuar como un verdadero / falso en las parejas-->          
     <footer class="foot">           
