--- a/pages/nuestraboda.html
+++ b/pages/nuestraboda.html
@@ -51,39 +51,40 @@
                   <div class="titulos bg-body rounded"> </div> 
                   <h1 class="tituloprincipal my-1"> NUESTRA BODA </h1>
                     
-                <p class="texto-boda2">
+                <p class="texto-boda2 line-height">
                 Historias y momentos que se contemplan en el corazón,
                 me gusta atesorar y revivir cada momento como si no fuese a acabar nunca y
                 espero que a ustedes también les de esa sensación mi página que atesora momentos 
                 del corazón . Sentir que todas las miradas nos abrazaban con cariño era muy gratificante,
-                después de dos largos años de posponer fechas que nunca se daban ese día llego, y 
-                llego adornado de un día de sol radiante de un 28 de agosto de 2022, con la decoración al aire libre que tanto queríamos, con cada plumerillo y adorno que juntamos muchos meses antes con tanta dedicación para que ese día quede lindo ,  
-                al igual que las invitaciones y muchas cosas y detalles que tuvo la boda salieron de nuestra imaginación 
-                ,era un día donde éramos las estrellas y los protagonistas de cada mirada. Y espero puedan apreciarlo en
-                cada pestaña que vallan recorriendo. Que les transmita un poquito de lo que sentimos ese día.  
-                </p>
+                después de dos largos años de posponer fechas que nunca se daban ese día llegó. 
+                <h2 class="cuando my-1 fs-2 fw-bold d-flex justify-content-center bg-p text-muted"> ¿Cuándo fue la Boda ? </h2> 
+
+                <p class="texto-boda2">Un 28 de agosto de 2022, con la decoración al aire libre que tanto queríamos, con cada plumerillo y adorno que juntamos muchos meses antes con tanta dedicación para que ese día quede lindo ,  
+                  al igual que las invitaciones y muchas cosas y detalles que tuvo la boda salieron de nuestra imaginación 
+                  ,era un día donde éramos las estrellas y los protagonistas de cada mirada. Y espero puedan apreciarlo en
+                  cada pestaña que vallan recorriendo.  
+                  </p>
                 </div>
         </section>
             <br>
             <hr class="featurette-divider">
         <section>
-                <h2 class="texto-bodau my-4">Ubicación Del Salon </h2> <!--mapa del salon de la fiesta-->
+                <h2 class="texto-bodau my-3">Ubicación Del Salon </h2> <!--mapa del salon de la fiesta-->
                 <iframe class="iframe my-1" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3367.5441499807!2d-63.232896184826764!3d-32.43136668107764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cc425eef6dd39d%3A0xb2e353326bdad938!2sVilla%20Maria%20Golf!5e0!3m2!1ses-419!2sar!4v1666641755772!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" 
                 loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <p class="texto-boda4 my-4">
+                <p class="texto-boda4 my-4 line-height">
                 El salón que elegimos es sencillo y muy lindo por su gran predio de golf en 
-                Villa María -Córdoba donde es muy famoso por sus torneos y su llamativo predio. 
+                Villa María -Córdoba,donde es muy famoso por sus torneos y su llamativo predio. 
                 Hoy con sesenta y cinco años en su haber, luce una magnifica cancha con un trazado natural
-                que poco tiene que envidiarles a los escenarios serranos y que se posa sobre el viejo lecho 
-                del rio Ctalamuchita que fue cambiando su curso con el paso del tiempo. Donde celebran muchos
-                eventos y bodas al aire libre, pero que cuenta con un salón moderno y muy vistoso. 
+                que poco tiene que envidiarles a los escenarios serranos. Se celebran muchos
+                eventos y bodas al aire libre, cuenta con un salón moderno y muy vistoso. 
                 </p>
         </section>
         <hr class="featurette-divider">
             <br>
         <section>
                 <div class="corazonrosa"> </div> 
-                <h2 class="texto-bodav my-1"> Video de Nuestra Pre Boda en las Sierras de Córdoba </h2>
+                <h2 class="texto-bodav my-1 fs-2"> Video de Nuestra Pre Boda en las Sierras de Córdoba </h2>
                 <br>
                 <iframe class="video my-1" width="700" height="315" src="../assets/videos/VIDEO BODA.mp4" 
                 title="video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
