--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contacto</title>
+    <title>S&S-Contacto</title>
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png"/>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -14,12 +14,12 @@
         <header class="boda4">
             <a href="../index.html">
             <div class="logo">
-              <img src="../assets/images/LOGO WEB.png" alt="LOGO.png">
+              <img src="../assets/images/sslogo.png" alt="Logos&srosa.png">
             </div> 
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
                       <a class="navbar-brand" href="#"> 
-                      <img src="../assets/images/corazon.jpg.svg" alt="" width="30" height="24"></a>
+                      <img src="../assets/images/corazon.jpg.svg" alt="corazonrojo.jpg" width="30" height="24"></a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -91,7 +91,7 @@
                 <section class="tarjetas my-2">
                     <div class="card-group">
                       <div class="card">
-                        <img src="../assets/images/c.jpg" class="card-img-top" alt="foto1">
+                        <img src="../assets/images/c.jpg" class="card-img-top" alt="novios relatando anecdotas">
                         <div class="card-body">
                           <h5 class="card-title">UNA BODA CON ANÉCDOTAS</h5>
                           <p class="card-text">Anectodas de como nos conocimos, el camino recorrido , los años , y las cosas vergonzosas que vivimos. </p>
@@ -99,7 +99,7 @@
                         </div>
                       </div>
                       <div class="card">
-                        <img src="../assets/images/a.jpg" class="card-img-top" alt="foto2">
+                        <img src="../assets/images/a.jpg" class="card-img-top" alt="elvals">
                         <div class="card-body">
                           <h5 class="card-title">NO FALTA EL CLÁSICO VALS</h5>
                           <p class="card-text">Momento familiar Clasico en toda boda que deja un Recuerdo Especial en todos los corazones.</p>
@@ -107,7 +107,7 @@
                         </div>
                       </div>
                       <div class="card">
-                        <img src="../assets/images/b.jpg" class="card-img-top " alt="foto3">
+                        <img src="../assets/images/b.jpg" class="card-img-top " alt="toro mecanico">
                         <div class="card-body">
                           <h5 class="card-title">JUEGOS AL AIRE LIBRE</h5>
                           <p class="card-text"> Toro Mecánico , fueron muchos los valientes derrotados , Predio Club Golf de Villa Maria.  </p>
@@ -121,13 +121,12 @@
          <footer class="foot">           
           <div class= "iconos">
             <a href="https://msng.link/o/?sofia.borsato=ig" target="_blank" >
-              <img src="../assets/images/insta chiquito.svg" height="30" width="30"  alt=""></a>
+              <img src="../assets/images/insta chiquito.svg" height="30" width="30"  alt="instagram.svg"></a>
               <a href="https://wa.me/3471623833?text=whatsapp" target="_blank">
-              <img src="../assets/images/whatsapp chiquito.svg" height="30" width="30" alt=""></a>
+              <img src="../assets/images/whatsapp chiquito.svg" height="30" width="30" alt="whatsapp.svg"></a>
           </div> 
          <div>
-          Copyright @ 2022 - desarrollado por
-          <a class="text-dark" href="" target="_blank">Borsato Sofia</a>
+          Copyright 2022 - Desarrollado por Borsato Sofia
           </div>
         </footer>
         <script src="../js/bootstrap.bundle.min.js"> 
