--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
+    <title>S&S-Nosotros</title>
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -14,12 +14,12 @@
     <header class="boda2">
             <a href="../index.html">
             <div class="logo">
-               <img src="../assets/images/LOGO WEB.png" alt="LOGO.png">
+               <img src="../assets/images/sslogo.png" alt="Logos&srosa.png">
             </div> 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
               <div class="container-fluid">
                   <a class="navbar-brand" href="#"> 
-                  <img src="../assets/images/corazon.jpg.svg" alt="" width="30" height="24"></a>
+                  <img src="../assets/images/corazon.jpg.svg" alt="corazonrojo.jpg" width="30" height="24"></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -66,7 +66,7 @@
             <div class="container-fluid1 my-3">
                 <div class="row my-3">
                      <div class="col-md-6 col-sm-12">
-                       <img class="fotografias rounded-circle my-3" src="../assets/images/nosotros2" alt="foto">
+                       <img class="fotografias rounded-circle my-3" src="../assets/images/nosotros2" alt="sofia">
                      </div>
                      <div class="col-md-6 col-sm-12 d-flex flex-column align-items-center justify-content-center">
                         <div>
@@ -83,7 +83,7 @@
         <div class="container-fluid1 my-3">
             <div class="row">
                  <div class="col-md-6 col-sm-12">
-                   <img class="fotografias rounded-circle" src="../assets/images/nosotros1" alt="foto2">
+                   <img class="fotografias rounded-circle" src="../assets/images/nosotros1" alt="sebastian">
                  </div>
                  <div class="col-md-6 col-sm-12 d-flex flex-column align-items-center justify-content-center">
                     <div>
@@ -101,7 +101,7 @@
        <section>
             <div class="container-fluid3 my-3">
                 <div class="card bg-dark text-white">
-                     <img src="../assets/images/preboda.jpg" class="card-img" alt="foto3">
+                     <img src="../assets/images/preboda.jpg" class="card-img" alt="nuestrapreboda.jpg">
                     <div class="card-img-overlay">
                       <h5 class="card-title ">FUISTE ,ERES, Y SIEMPRE SERÁS MI MÁS BONITA CASUALIDAD </h5>
                     </div>
@@ -112,13 +112,12 @@
     <footer class="foot">           
       <div class= "iconos">
         <a href="https://msng.link/o/?sofia.borsato=ig" target="_blank" >
-          <img src="../assets/images/insta chiquito.svg" height="30" width="30"  alt=""></a>
+          <img src="../assets/images/insta chiquito.svg" height="30" width="30"  alt="instagram.svg"></a>
           <a href="https://wa.me/3471623833?text=whatsapp" target="_blank">
-          <img src="../assets/images/whatsapp chiquito.svg" height="30" width="30" alt=""></a>
+          <img src="../assets/images/whatsapp chiquito.svg" height="30" width="30" alt="whatsapp.svg"></a>
       </div> 
      <div>
-      Copyright @ 2022 - desarrollado por
-      <a class="text-dark" href="" target="_blank">Borsato Sofia</a>
+      Copyright 2022 - Desarrollado por Borsato Sofia
       </div>
     </footer> 
     <script src="../js/bootstrap.bundle.min.js"> 
